Revision history for Perl extension WWW-PGXN.

0.12.3

0.12.2  2011-08-10T17:25:27
      - Require URI::Template 0.15.

0.12.1  2011-05-12T18:11:02
      - Fixed test failures on Windows.
      - Support Perl 5.10 and higher. Tests were failing on 5.8.

0.12.0  2011-04-29T21:50:27
      - Initial public release on CPAN.