@@ -1,6 +1,9 @@
 Revision history for Perl extension WWW-PGXN.
 
 0.12.3
+      - Updated URI::Template to v0.16 for its support for `{+var}` and
+        dropped the nasty hack required to work around the lack of it in
+        earlier versions.
 
 0.12.2  2011-08-10T17:25:27
       - Require URI::Template 0.15.
